# Churn-Model

./: README.md  app.py  experiments.ipynb  model.h5  pyproject.toml  requirements.txt
logs/fit/20250626-010726/train/: events.out.tfevents.1750880268.HANSAL.1832.4.v2
logs/fit/20250626-010726/validation/: events.out.tfevents.1750880268.HANSAL.1832.5.v2
