[project]
name = "churn-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.1.3",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "streamlit>=1.46.0",
    "tensorboard>=2.19.0",
    "tensorflow>=2.19.0",
]
